apps/kubernetes-website/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: k8sdocs-svc
spec: 
  ports: 
  - port: 80
    protocol: TCP
    targetPort: 80
  selector: 
    k8s-app: k8sdocs
  type: NodePort
