apps/kubernetes-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8sdocs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /k8sdocs
        backend:
          serviceName: k8sdocs
          servicePort: 80
